--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ contourpy==1.2.1
 cycler==0.12.1
 filelock==3.15.4
 Flask==3.0.3
+Flask-Cors==4.0.1
 Flask-SQLAlchemy==3.1.1
 fonttools==4.53.1
 frozendict==2.4.4
@@ -33,7 +34,6 @@ pillow==10.4.0
 platformdirs==4.2.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-pytz==2024.1
 requests==2.32.3
 scikit-learn==1.5.1
 scipy==1.13.1
